added whyus, change prices, feedback form and change styles

--- a/business-site/src/components/Header/Header.css
+++ b/business-site/src/components/Header/Header.css
@@ -4,19 +4,21 @@ header {
   width: 85vw;
   line-height: 9vh;
   display: block;
+  color: #2c3e50;
 }
 
 .logo {
   font-size: 30px;
   font-weight: 500;
   margin-left: 2vw;
-} 
+}
 
 .menu {
   max-height: 9vh;
   display: block;
   float: right;
   line-height: 9vh;
+  color: #2c3e50;
 }
 
 .menu button a {
@@ -25,6 +27,7 @@ header {
   color: #000;
   transition: 300ms;
   opacity: 0.7;
+  color: #2c3e50;
 }
 
 .menu button a:not(:hover:last-of-type) {
@@ -37,13 +40,21 @@ header {
 
 .menu button:last-of-type {
   margin-left: 2.5vw;
-  border: 2px solid #ccc;
-  padding: 1.5vh 1.5vw;
-  border-radius: 100px;
   transition: 300ms;
+  color: #000;
+  padding: 1em 2em;
+  border-radius: 10em;
+  transition: 300ms;
+  font-weight: 500;
+  font-size: 1em;
+  border: none;
+  border: 2px solid rgba(66, 49, 135, 1);
+  background-color: #fff;
+  cursor: pointer;
+  box-shadow: 0 2px 7px rgba(0, 0, 0, 0.1);
 }
 
 .menu button:last-of-type:hover {
-  cursor: pointer;
   opacity: 0.7;
+  background-color: #ece9fd;
 }
