--- a/src/components/FeedbackSection/FeedbackSection.css
+++ b/src/components/FeedbackSection/FeedbackSection.css
@@ -1,9 +1,7 @@
-.feedback-block {
-  /* background-color: #fff; */
+/* .feedback-block {
   text-align: center;
   padding: 2em;
   border-radius: 10px;
-  /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
   max-width: 80vw;
   margin: 2em auto;
 }
@@ -33,7 +31,7 @@
 
 .feedback-button:hover {
   background-color: #5a4ec7;
-}
+} */
 
 /* .modal-overlay {
   position: fixed;
