--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -44,11 +44,10 @@ header {
   color: #000;
   padding: 1em 2em;
   border-radius: 10em;
+  border: 2px solid rgba(0, 86, 210, 1);
   transition: 300ms;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 1em;
-  border: none;
-  border: 2px solid rgba(66, 49, 135, 1);
   background-color: #fff;
   cursor: pointer;
   box-shadow: 0 2px 7px rgba(0, 0, 0, 0.1);
@@ -58,3 +57,83 @@ header {
   opacity: 0.7;
   background-color: #ece9fd;
 }
+
+/* header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 9vh;
+  padding: 0 5vw;
+}
+
+.logo {
+  font-size: 24px;
+  font-weight: 600;
+  color: #2c3e50;
+}
+
+.menu {
+  display: flex;
+  gap: 2vw;
+}
+
+.menu button a {
+  font-size: 17px;
+  font-weight: 500;
+  color: #2c3e50;
+  text-decoration: none;
+}
+
+.order-btn {
+  padding: 0.8em 1.5em;
+  border-radius: 10em;
+  border: 2px solid #0056d2;
+  font-weight: 600;
+  background-color: #fff;
+  cursor: pointer;
+  transition: background 300ms;
+}
+
+.order-btn:hover {
+  background-color: #ece9fd;
+}
+
+.menu-icon {
+  display: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 24px;
+}
+
+@media (max-width: 768px) {
+  .menu {
+    position: absolute;
+    top: 9vh;
+    right: 0;
+    width: 100%;
+    background: white;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transform: translateY(-100%);
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .menu.open {
+    transform: translateY(0);
+  }
+
+  .menu button {
+    width: 100%;
+    text-align: center;
+    padding: 1em 0;
+    border-top: 1px solid #ddd;
+  }
+
+  .menu-icon {
+    display: block;
+  }
+} */
+
+/* ____________________________________________________ */
