--- a/src/components/Price/Price.css
+++ b/src/components/Price/Price.css
@@ -20,7 +20,6 @@
   width: 100%;
   max-width: 23vw; /* Ограничение ширины блоков */
   min-height: auto;
-  /* max-height: 85vh; */
   line-height: 1.6em;
   align-items: center;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -48,13 +47,14 @@
 }
 
 .price-wrapper section .text {
-  text-align: center;
+  line-height: 1.6;
+  /* text-align: center; */
   font-size: 1.2em;
   /* color: #1111118f; */
   font-weight: 400;
-  margin: 1em 0;
+  margin: -1em 0 1.2em 1em;
   flex-grow: 1; /* Занимает оставшееся пространство между заголовком и кнопкой */
-  color: #7f8c8d;
+  color: #444;
 }
 
 .price-wrapper section button {
@@ -63,10 +63,11 @@
   padding: 1em 2em;
   border-radius: 10em;
   transition: 300ms;
-  font-weight: 500;
+  font-weight: 520;
   font-size: 1em;
   border: none;
-  border: 2px solid rgba(66, 49, 135, 1);
+  /* border: 2px solid rgba(66, 49, 135, 1); */
+  border: 2px solid rgba(0, 86, 210, 1);
   background-color: #fff;
   cursor: pointer;
   align-self: center; /* Расположение кнопки по центру ширины секции */
