--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,14 @@
 header {
-  height: 9vh;
+  height: 5em;
   margin: auto;
   width: 85vw;
-  line-height: 9vh;
+  line-height: 5em;
   display: block;
   color: #2c3e50;
+  @media (max-width: 1024px) {
+    height: 6em;
+    line-height: 6em;
+  }
   @media (max-width: 748px) {
     height: 10vh;
     line-height: 10vh;
@@ -12,11 +16,12 @@ header {
 }
 
 .logo {
-  font-size: 1.87em;
+  font-size: 30px;
+  font-size: 2.2em;
   font-weight: 500;
   margin-left: 2vw;
   @media (max-width: 748px) {
-    font-size: 1.5em;
+    font-size: 1.8em;
   }
 }
 
@@ -29,7 +34,7 @@ header {
 }
 
 .menu button a {
-  font-size: 17px;
+  font-size: 1em;
   font-weight: 500;
   color: #000;
   transition: 300ms;
@@ -58,6 +63,14 @@ header {
   background-color: #fff;
   cursor: pointer;
   box-shadow: 0 2px 7px rgba(0, 0, 0, 0.1);
+  @media (max-width: 1024px) {
+    font-size: 1.3em;
+    padding: 1em 1em;
+    font-weight: 550;
+  }
+  @media (max-width: 748px) {
+    visibility: hidden;
+  }
 }
 
 .menu button:last-of-type:hover {
