--- a/src/components/Feedback/Feedback.css
+++ b/src/components/Feedback/Feedback.css
@@ -78,7 +78,7 @@
   display: flex;
 }
 
-#submit {
+#submit-btn {
   box-shadow: 0 2px 7px rgba(0, 0, 0, 0.1);
   min-width: 30%;
   color: #000;
@@ -95,12 +95,12 @@
   margin-top: auto;
 }
 
-#submit:disabled {
+#submit-btn:disabled {
   cursor: not-allowed;
   background-color: silver;
 }
 
-#submit:hover {
+#submit-btn:hover {
   opacity: 0.7;
   background-color: #ece9fd;
 }
